Modified for use with splunk setup app

--- a/default/appconfig.conf
+++ b/default/appconfig.conf
@@ -4,13 +4,6 @@
 # into ../local and edit there.
 # Blame goes to Justin Boucher <jboucher@splunk.com>.
 
-###### Applications OAuth2 Information ######
-
-[Authentication] 
-C_KEY =
-C_SECRET =
-REDIRECT_URI =
-
 ###### App Server Config ######
 # Consult the API documentation for your app to determine this information
 # AVAILABLE_SCOPES are equal to the permissions that Splunk will have access to.
@@ -18,13 +11,15 @@ REDIRECT_URI =
 # TOKEN_URL and AUTHORIZE_URL are everything after the servername must have leading slash.
 # SAMPLE_CALL is used to test connection. Profile information is best for this type of call.
 
-[AppServer]
+[AppConfigs] 
+C_KEY =
+C_SECRET =
+REDIRECT_URI =
 API_SERVER =
 AUTHORIZE_URL =
 TOKEN_URL =
 SCOPES =
 SAMPLE_CALL =
-
 
 ###### Advanced App Config ######
 # These settings are provided to add timeseries type data if required.
