--- a/default/restmap.conf
+++ b/default/restmap.conf
@@ -4,5 +4,5 @@ members=<APPNAME>setup
 
 [admin_external:<APPNAME>setup]
 handlertype = python
-handlerfile = config_handler.py
+handlerfile = lib/config_handler.py
 handleractions = list, edit
